# yunmao

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  README.md
.github/workflows/: android.yml  go.yml  integration.yml  openapi-contract.yml  perf.yml  phase-a-verify.yml  proto.yml  release-staging.yml  rust.yml  webrtc-it.yml
clients/admin/: .env.example  .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
clients/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
clients/cat-feeder-sim/: README.md  go.mod  go.sum
clients/ios/: README.md
clients/web/: .env.example  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
clients/web-demo/: README.md  demo.js  index.html  styles.css
deploy/: Dockerfile.admin  Dockerfile.web  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.ecs.yml  docker-compose.staging.yml
deploy/emqx/: jwt-authn.conf
deploy/nginx/: yunmao.net.cn.bootstrap.conf  yunmao.net.cn.conf
deploy/observability/: prometheus.yml
deploy/turn/: coturn.conf  docker-compose.turn.yml
docs/: YUNMAO_ECS_DEPLOY_PRODUCTION_README.md
docs/autopilot/: 01_project_charter.md  02_phase_plan.md  03_audit_checklist.md  07_rust_core_go_assist_architecture.md  08_phase10_completion_and_closeout_decision_2026-05-31.md  09_phase11_candidate_plan_2026-05-31.md  10_phase11_handoff_draft_2026-05-31.md  11_phase10_owner_continue_closeout_writeback_2026-05-31.md  12_final_owner_decision_continue_closeout_2026-05-31.md  phase8_kickoff_plan.md  phase_handoff_iteration_1_phase_iter1_20260526220345.md  phase_handoff_iteration_288_phase_iter288_20260527210230.md  phase_handoff_iteration_290.md  phase_handoff_iteration_290_phase_iter290_20260527220511.md  phase_handoff_iteration_292.md  phase_handoff_iteration_294_phase_iter294_20260528034038.md  phase_handoff_iteration_296_phase_iter296_20260528073353.md  phase_handoff_iteration_297_phase_iter297_20260529120159.md  phase_handoff_iteration_297_phase_iter297_20260529120520.md  phase_handoff_iteration_297_phase_iter297_20260529121347.md  phase_handoff_iteration_297_phase_iter297_20260529121709.md  phase_handoff_iteration_297_phase_iter297_20260529121759.md  phase_handoff_iteration_297_phase_iter297_20260529121853.md  phase_handoff_iteration_297_phase_iter297_20260529121947.md  phase_handoff_iteration_297_phase_iter297_20260529122039.md  phase_handoff_iteration_297_phase_iter297_20260529122135.md  phase_handoff_iteration_297_phase_iter297_20260529122227.md  phase_handoff_iteration_297_phase_iter297_20260529122316.md  phase_handoff_iteration_297_phase_iter297_20260529122416.md  phase_handoff_iteration_297_phase_iter297_20260529122509.md  phase_handoff_iteration_297_phase_iter297_20260529122600.md  phase_handoff_iteration_297_phase_iter297_20260529122654.md  phase_handoff_iteration_297_phase_iter297_20260529122745.md  phase_handoff_iteration_297_phase_iter297_20260529122821.md  phase_handoff_iteration_297_phase_iter297_20260529122912.md  phase_handoff_iteration_297_phase_iter297_20260529123009.md  phase_handoff_iteration_297_phase_iter297_20260529123109.md  phase_handoff_iteration_297_phase_iter297_20260529123146.md  phase_handoff_iteration_297_phase_iter297_20260529123303.md  phase_handoff_iteration_297_phase_iter297_20260529123352.md  (+794 more)
docs/dev/: 00-bootstrap-notes.md  01-bootstrap-deliverable.md  02-second-iteration-deliverable.md  03-third-iteration-deliverable.md  04-fourth-iteration-deliverable.md  05-fifth-iteration-deliverable.md  06-sixth-iteration-deliverable.md  07-seventh-iteration-deliverable.md  08-eighth-iteration-deliverable.md
docs/earlyproductplanning/: 一个人用AI搓了个网站，结果全世界都来喂他的猫，差点挤崩服务器.md  云养猫平台完整设计方案.md  云养猫平台方案.md  云养猫平台设计方案.md  云养猫直播投喂平台.md  云养猫直播投喂平台全案设计.md  云养猫直播投喂平台全链路产品与技术设计方案.md  云养猫直播投喂平台完整产品方案.md  他花了一晚上用 AI 写了个网站，结果全球网友挤爆服务器，只为喂他一口猫粮.md  有人用 AI 搓了个喂猫网站，结果全网都跑来喂他的猫，导致服务器被挤爆了.md
docs/execution/: README.md
docs/finalproductplanning/: 00-项目总纲与产品PRD.md  01-技术选型与系统架构.md  02-高清低延迟直播架构.md  03-功能模块与多端一期规划.md  04-设备接入数据模型与API边界.md  05-开发Phase里程碑与验收.md  06-运维监控安全合规.md  07-决策记录与待确认问题.md  08-多端工程组织与协作.md  09-测试质量与发布工程.md  10-增长商业化与运营.md  11-数据指标与术语表.md  README.md
go/: .golangci.yml  Dockerfile  go.work  go.work.sum  sqlc.yaml
go/migrations/: 0001_init.sql  0002_outbox_and_events.sql  (+7 more)
proto/: README.md  buf.gen.yaml  buf.yaml
rust/: .gitignore  Cargo.toml  Dockerfile
rust/crates/yunmao-common/: Cargo.toml
rust/crates/yunmao-common/src/: cloudevents.rs  error.rs  id.rs  lib.rs  telemetry.rs
rust/crates/yunmao-device-edge/: Cargo.toml
rust/crates/yunmao-device-edge/src/: device_info.rs  kafka_runtime.rs  lib.rs  main.rs  scheduler.rs  server.rs  simulator.rs
rust/crates/yunmao-eventbus/: Cargo.toml
rust/crates/yunmao-eventbus/src/: kafka.rs  lib.rs  memory.rs  topic.rs
rust/crates/yunmao-gateway/: Cargo.toml
rust/crates/yunmao-gateway/examples/: bench_ws.rs
rust/crates/yunmao-gateway/src/: auth.rs  fanout.rs  hub.rs  kafka_runtime.rs  lib.rs  main.rs  server.rs
rust/crates/yunmao-ingest/: Cargo.toml
rust/crates/yunmao-ingest/src/: flv.rs  lib.rs  pipe.rs  router.rs  rtmp.rs
rust/crates/yunmao-media-edge/: Cargo.toml
rust/crates/yunmao-media-edge/src/: abr.rs  fmp4.rs  http_flv.rs  lib.rs  ll_hls.rs  main.rs  mediasink.rs  metrics.rs  qoe.rs  server.rs
rust/crates/yunmao-protocol/: Cargo.toml
rust/crates/yunmao-protocol/src/: device.rs  events.rs  lib.rs  signaling.rs
rust/crates/yunmao-redis/: Cargo.toml
rust/crates/yunmao-redis/src/: lib.rs
rust/crates/yunmao-webrtc/: Cargo.toml
rust/crates/yunmao-webrtc/src/: lib.rs  rtp.rs  sfu.rs  webrtc_rs.rs  whip_whep.rs
scripts/: bench-ws.sh  ci-equivalence-check.sh  ci-push-to-github.sh  credential-check.sh  e2e.sh  gen-proto.sh  phase-a-verify.sh  poc-feed.sh  staging-smoke.sh  validate-ci-workflows.sh  yunmao-ecs-deploy.sh  yunmao-ecs-preflight-check.sh
(+354 files in other folders)
