[package]
name = "yunmao-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "yunmao 平台通用工具：ID、错误、CloudEvents、tracing 初始化"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
ulid.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
proptest.workspace = true
