[package]
name = "yunmao-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "高密度 WebSocket 网关：房间订阅、心跳、扇出"

[[bin]]
name = "yunmao-gateway"
path = "src/main.rs"

[dependencies]
yunmao-common.workspace = true
yunmao-protocol.workspace = true
yunmao-eventbus = { path = "../yunmao-eventbus" }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio-tungstenite.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ulid = { workspace = true }
jsonwebtoken = "9"
async-trait = { workspace = true }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio", "streams"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = { workspace = true }

[[example]]
name = "bench_ws"
path = "examples/bench_ws.rs"
