[package]
name = "yunmao-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "yunmao Redis 客户端（device-edge 幂等 set、gateway 在线集合等）"

[dependencies]
yunmao-common.workspace = true
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
redis = { version = "0.26", default-features = false, features = ["tokio-comp", "aio"] }
